--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,9 +1,14 @@
+<div class="card flex justify-content-center">
+  <p-sidebar [(visible)]="sidebarVisible">
+    <p-menubar [model]="items"></p-menubar>
+  </p-sidebar>
+</div>
 
-<p-sidebar [(visible)]="sidebarVisible">
-  <p-menubar [model]="items"></p-menubar>
-</p-sidebar>
+
+
 <div>
-  <p-button (click)="sidebarVisible = true" icon="pi pi-bars" label="Menu" styleClass="p-button-raised p-button-link"></p-button>
+  <p-button (click)="sidebarVisible = true" icon="pi pi-bars" label="Menu"
+    styleClass="p-button-raised p-button-link"></p-button>
 </div>
 
 <div>
