--- a/frontend/src/app/components/proyectosform/proyectosform.component.css
+++ b/frontend/src/app/components/proyectosform/proyectosform.component.css
@@ -1,151 +1,170 @@
-.boton-redondo{
-    border-radius: 10px;
-  }
+.boton-redondo {
+  border-radius: 10px;
+}
 
 .container {
-    margin: 20px;
+  margin: 20px;
 }
 
 .project-details {
-    background-color: #f9f9f9;
-    border: 1px solid #ddd;
-    padding: 20px;
-    border-radius: 5px;
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+  padding: 20px;
+  border-radius: 5px;
 }
 
 .project-title {
-    font-size: 24px;
-    margin-bottom: 10px;
-    text-align:center;
-    
+  font-size: 24px;
+  margin-bottom: 10px;
+  text-align: center;
+
 }
 
 .project-info-list {
-    list-style-type: none;
-    padding: 0;
+  list-style-type: none;
+  padding: 0;
 }
 
 .project-info-list li {
-    margin: 5px 0;
+  margin: 5px 0;
 }
-  
-  /* Estilo para la tabla */
-  .custom-table {
+
+/* Estilo para la tabla */
+.custom-table {
   width: 100%;
   margin-top: 20px;
-  
-  }
-  
-  /* Estilo para los encabezados de columna */
-  .custom-table th {
-  background-color: #007bff; /* Color de fondo del encabezado */
-  color: white; /* Color del texto del encabezado */
-  text-align: left; /* Alineación del texto */
-  padding: 10px; /* Espaciado interno */
-  }
-  
-  /* Estilo para las filas impares */
-  .custom-table tbody tr:nth-child(odd) {
-  background-color: #f2f2f2; /* Fondo de fila impar */
-  }
-  
-  /* Estilo para las filas al pasar el ratón sobre ellas */
-  .custom-table tbody tr:hover {
-  background-color: #e0e0e0; /* Fondo al pasar el ratón */
-  }
-  
-  
-  /* Estilo para el enlace del archivo */
-  .custom-table a {
-  color: #007bff; /* Color del enlace */
-  text-decoration: none; /* Sin subrayado */
-  }
-  
-  /* Estilo para el enlace del archivo al pasar el ratón sobre él */
-  .custom-table a:hover {
-  text-decoration: underline; /* Subrayado al pasar el ratón */
-  }
-  
-  .custom-table {
-  border-collapse: collapse; /* Colapsar bordes para crear líneas entre celdas */
-  width: 100%;
-  }
-  
-  .custom-table th, .custom-table td {
-  border: 1px solid #ddd; /* Borde de 1px con color gris claro */
-  padding: 8px; /* Espaciado interno */
+
+}
+
+/* Estilo para los encabezados de columna */
+.custom-table th {
+  background-color: #007bff;
+  /* Color de fondo del encabezado */
+  color: white;
+  /* Color del texto del encabezado */
   text-align: left;
-  }
-  
-  .file-cell {
-  white-space: nowrap; /* Evitar que el nombre del archivo se rompa en varias líneas */
-  }
-  
-  .file-link {
-  text-decoration: none; /* Sin subrayado para los enlaces de archivos */
-  color: #007bff; /* Color del enlace */
-  }
-  
-  /* Contenedor del formulario */
+  /* Alineación del texto */
+  padding: 10px;
+  /* Espaciado interno */
+}
+
+/* Estilo para las filas impares */
+.custom-table tbody tr:nth-child(odd) {
+  background-color: #f2f2f2;
+  /* Fondo de fila impar */
+}
+
+/* Estilo para las filas al pasar el ratón sobre ellas */
+.custom-table tbody tr:hover {
+  background-color: #e0e0e0;
+  /* Fondo al pasar el ratón */
+}
+
+
+/* Estilo para el enlace del archivo */
+.custom-table a {
+  color: #007bff;
+  /* Color del enlace */
+  text-decoration: none;
+  /* Sin subrayado */
+}
+
+/* Estilo para el enlace del archivo al pasar el ratón sobre él */
+.custom-table a:hover {
+  text-decoration: underline;
+  /* Subrayado al pasar el ratón */
+}
+
+.custom-table {
+  border-collapse: collapse;
+  /* Colapsar bordes para crear líneas entre celdas */
+  width: 100%;
+}
+
+.custom-table th,
+.custom-table td {
+  border: 1px solid #ddd;
+  /* Borde de 1px con color gris claro */
+  padding: 8px;
+  /* Espaciado interno */
+  text-align: left;
+}
+
+.file-cell {
+  white-space: nowrap;
+  /* Evitar que el nombre del archivo se rompa en varias líneas */
+}
+
+.file-link {
+  text-decoration: none;
+  /* Sin subrayado para los enlaces de archivos */
+  color: #007bff;
+  /* Color del enlace */
+}
+
+/* Contenedor del formulario */
+.form-container {
+  width: 100%;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #f9f9f9;
+}
+
+/* Campos del formulario */
+.form-field {
+  margin-bottom: 15px;
+}
+
+/* Estilos para etiquetas */
+.form-field label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+/* Estilos para campos de entrada de texto y número */
+.input-field {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+
+/* Estilos para selects */
+.input-field select {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #cccccc;
+  border-radius: 3px;
+}
+
+/* Estilos para botones */
+.button {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+/* Estilos para el formulario en dispositivos móviles */
+@media (max-width: 768px) {
   .form-container {
-    width: 100%;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #f9f9f9;
+    max-width: 100%;
+    padding: 10px;
   }
-  
-  /* Campos del formulario */
+
   .form-field {
-    margin-bottom: 15px;
+    margin-bottom: 10px;
   }
-  
-  /* Estilos para etiquetas */
-  .form-field label {
-    display: block;
-    font-weight: bold;
-    margin-bottom: 5px;
-  }
-  
-  /* Estilos para campos de entrada de texto y número */
-  .input-field {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-  }
-  
-  /* Estilos para selects */
+
+  .input-field,
   .input-field select {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #cccccc;
-    border-radius: 3px;
+    padding: 5px;
   }
-  
-  /* Estilos para botones */
+
   .button {
-    padding: 10px 20px;
-    border: none;
-    border-radius: 3px;
-    cursor: pointer;
+    padding: 8px 15px;
   }
-  
-  /* Estilos para el formulario en dispositivos móviles */
-  @media (max-width: 768px) {
-    .form-container {
-      max-width: 100%;
-      padding: 10px;
-    }
-    .form-field {
-      margin-bottom: 10px;
-    }
-    .input-field, .input-field select {
-      padding: 5px;
-    }
-    .button {
-      padding: 8px 15px;
-    }
-  }
-  
+}
